# ONScripter-CN

./: AndroidManifest.xml  ChangePackageName.java  README.md  build.txt  build.xml  release.keystore
jni/: Android.mk  Application.mk
jni/app_onscripter-16bpp/: Android.mk
jni/app_onscripter-16bpp/onscripter-20121116/: AnimationInfo.cpp  FontInfo.cpp  LUAHandler.h  Makefile.onscripter  ONScripter_command.cpp  ONScripter_file2.cpp  ONScripter_rmenu.cpp  ONScripter_text.cpp  ScriptHandler.cpp  ScriptParser.cpp  mmrank.cpp  onscripter_main.cpp
jni/app_onscripter-16bpp/onscripter-20130210/: DirectReader.cpp  FontInfo.h  LUAHandler.cpp  LUAHandler.h  Makefile.onscripter  ONScripter.h  ONScripter_event.cpp  ONScripter_file2.cpp  ONScripter_text.cpp  ScriptParser_command.cpp  onslocale.h  version.h
jni/app_onscripter-16bpp/onscripter-20130317/: AnimationInfo.cpp  Crypt.h  DirectReader.h  LUAHandler.h  NsaReader.cpp  ONScripter_extra.cpp  ONScripter_file2.cpp  ONScripter_lut.cpp  ONScripter_rmenu.cpp  SarReader.cpp  ScriptHandler.cpp  ScriptHandler.h  ScriptParser.cpp  ScriptParser_command.cpp  md5.h  onscripter_main.cpp  onslocale.cpp  prog.res  resize_image.cpp  sjis2utf16.cpp  version.h
jni/app_onscripter-32bpp/: Android.mk
jni/app_onscripter-32bpp/onscripter-20121116/: AnimationInfo.h  FontInfo.h  ONScripter.cpp  ONScripter.h  ONScripter_animation.cpp  ONScripter_event.cpp  ONScripter_image.cpp  ONScripter_lut.cpp  ScriptHandler.h  ScriptParser.h  mm.cpp  onslocale.h  version.h
jni/app_onscripter-32bpp/onscripter-20130210/: AnimationInfo.h  BaseReader.h  Makefile.WinCE  ONScripter.cpp  ONScripter_command.cpp  (+7 more)
jni/app_onscripter-en-16bpp/: Android.mk
jni/app_onscripter-en-32bpp/: Android.mk
jni/app_onsl/: Android.mk  svg_loader.h  video_player.h
jni/app_xclannad/: Android.mk
jni/app_xclannad/xclannad-0.07/: Makefile  Makefile.in  Makefile.xclannad  README  acconfig.h  aclocal.m4  autogen.sh  clear_ipc  config.h  config.h.in  config.h.in~  config.status  configure  configure.in  linux.m4  xlovesys.cc
jni/app_xclannad/xclannad-0.07/SYS/: clannad_rev.html
jni/app_xclannad/xclannad-0.07/font/: codeconv.cc  codeconv.h  codeconv_tbl.h  cp936.cc  cp936.h  font.h  font_face.cc  font_face.h  font_layout.cc  font_peer.h  font_peer_fn.cc  font_peer_ft2.cc  font_peer_x11.cc  text.h  text_stream.cc
jni/app_xclannad/xclannad-0.07/music2/: koedec.cc  koedec_ogg.cc  movie.cc  music.cc  music.h  nwatowav.cc  wavfile.cc
jni/app_xclannad/xclannad-0.07/scn2k/: gandump.cc  scn2k.h  scn2k_cmd.cc  scn2k_grp.cc  scn2k_impl.cc  scn2k_impl.h  scn2k_text.cc  scn2kdump.cc  test.cc
jni/app_xclannad/xclannad-0.07/system/: file.cc  file.h  file_impl.h  system_config.cc  system_config.h  visarc.cc
jni/app_xclannad/xclannad-0.07/window/: SDL_rotozoom.cc  SDL_rotozoom.h  button.cc  event.cc  event.h  menuitem.cc  menuitem.h  picture.cc  picture.h  rect.cc  rect.h  render.cc  runlengh.cc  surface.h  system.cc  system.h  widget.cc  widget.h
jni/app_xsystem35/: Android.mk
jni/bz2/: Android.mk
jni/lua-5.1.4/: Android.mk  Debugout.h  Makefile  lbit.c  llex.c  lua.h  lualib.h
jni/onscripter-20130812/: ScriptParser.h
jni/sdl-1.2_jni/: Android.mk
jni/sdl_image/: Android.mk  IMG.c
jni/sdl_main_jni/: Android.mk  sdl_main.c
jni/sdl_mixer/: Android.mk
jni/sdl_ttf/: Android.mk
jni/tremor/: Android.mk  ivorbisfile.h
jni/video_jni/: Android.mk  video_jni.cpp
jni/vorbis/: Android.mk
res/anim/: animatonset.xml  dialog_exit.xml  gameconfig_enter.xml  gameconfig_exit.xml  listanimation.xml
res/drawable/: about_button.xml  btn.xml  config_button.xml  play_button.xml  popupwindow.xml  settings_button.xml
res/layout/: activity_ft.xml  activity_main.xml  dialog.xml  game_config.xml  game_videoview.xml  gamelist_item.xml  list_item.xml  player_control.xml  player_video.xml  sao_dialog.xml  start.xml  video.xml  voldialog.xml
res/values/: colors.xml  strings.xml  styles.xml
res/values-ja/: strings.xml
(+262 files in other folders)
